--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/prakashaditya13/Algo.git"
   },
   "keywords": [
+    "Algo.js",
     "computer-science",
     "cs",
     "algorithms",
